--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="id.ac.ui.cs.mobileprogramming.devinwinardi.clevernote">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +21,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <receiver android:name="mobileprogramming.devinwinardi.clevernote.NotificationReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+        <service  android:name="mobileprogramming.devinwinardi.clevernote.NotificationService" />
         <activity
             android:name="mobileprogramming.devinwinardi.clevernote.MainActivity"
             android:label="@string/app_name"
@@ -22,6 +40,8 @@
         <activity android:name="mobileprogramming.devinwinardi.clevernote.ui.note.AddEditNoteActivity"
             android:parentActivityName="mobileprogramming.devinwinardi.clevernote.MainActivity"/>
         <activity android:name="mobileprogramming.devinwinardi.clevernote.ui.task.AddTaskActivity"
+            android:parentActivityName="mobileprogramming.devinwinardi.clevernote.MainActivity"/>
+        <activity android:name="mobileprogramming.devinwinardi.clevernote.OpenGLActivity"
             android:parentActivityName="mobileprogramming.devinwinardi.clevernote.MainActivity"/>
         <receiver android:name="mobileprogramming.devinwinardi.clevernote.ui.reminder.AlertReceiver" />
 
